# starbash

./: .aiignore  .doit.db.db  .gitignore  .gitmodules  .pre-commit-config.yaml  NOTES-kh.md  README.md  TODO.md  example_AutoBGE.py  example_hubble_palette_osc.py  gk_OSC_Extract_HaOIII.ssf  gk_OSC_Preprocessing.ssf  justfile  process.py  process.toml  pyproject.toml  siril-prepare.sh
.devcontainer/: Dockerfile  create-test-data.sh  devcontainer.json  on-shell-start.sh  post-create.sh
.devcontainer/geeksville-private/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  integration.yml  publish.yml
.pre-commit-scripts/: check-imports.py
doc/: .gitignore  analytics.md  asiair-typ-live-light.txt  development.md  doit.md  env_vars.md  notes-kh.md  pytest-output-control.md  reddit-announce.md  textual.md
doc/add-to-siril/: README.md
doc/fits/: README.md  asiair-typ-light.txt  bias-stacked.txt  flat-stacked.txt  malformedasimaster.txt  nina-bias-raw.txt  nina-dark-raw.txt  nina-typ-flat.txt  nina-typ-light.txt  seestar-stacked.txt  seestar-typ-light2.txt  typ-processed-file.txt
doc/poc/: process.py  processing_classic.py
doc/toml/: README.md  process.toml
doc/vhs/: process-auto.tape  process-siril.tape  sample-session.tape
examples/: parameter_demo.py
poc/: gk_OSC_Extract_HaOIII.ssf  gk_OSC_Preprocessing.ssf  process.py  siril-prepare.sh
src/astroglue/: __init__.py  app.py  appdefaults.ag.toml  database.py  main.py  tool.py
src/repo/: http_client.py  manager.py  repo.py
src/starbash/: __init__.py  aliases.py  analytics.py  app.py  check_version.py  database.py  doit.py  doit_types.py  dwarf3.py  exception.py  filtering.py  main.py  os.py  parameters.py  paths.py  processed_target.py  (+12 more)
test-data/: Dockerfile  README.md  push.sh  use-inflated.sh
tests/: conftest.py  test_aliases.py  test_analytics.py  test_app.py  test_cli.py  test_commands_selection.py  test_database.py  test_dwarf3.py  test_info.py  test_repo_manager.py  test_scoring.py  test_selection.py  test_tool.py  test_url.py
(+117 files in other folders)
