[tool.poetry.scripts]
astroglue = "astroglue.main:main"

[project]
name = "astroglue"
version = "0.1.0"
description = ""
authors = [{ name = "Kevin Hester", email = "kevinh@geeksville.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.15" # RestrictedPython doesn't yet work on 3.15
dependencies = [
    "tomlkit (>=0.13.3,<0.14.0)",
    "multidict (>=6.7.0,<7.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "restrictedpython (>=8.1,<9.0)",
]

[tool.poetry]
packages = [{ include = "astroglue", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["pytest (>=8.4.2,<9.0.0)"]
