[tool.poetry]
name = "starbash"
version = "0.1.0"
description = ""
authors = ["Kevin Hester <kevinh@geeksville.com>"]
readme = "README.md"
packages = [{ include = "starbash", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"         # RestrictedPython doesn't yet work on 3.15
tomlkit = ">=0.13.3,<0.14.0"
multidict = ">=6.7.0,<7.0.0"
rich = ">=14.2.0,<15.0.0"
restrictedpython = ">=8.1,<9.0"
astropy = ">=7.1.1,<8.0.0"
platformdirs = ">=4.5.0,<5.0.0"
typer = "^0.20.0"
pandas = "^2.3.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"

[tool.poetry.scripts]
starbash = "starbash.main:app"
sb = "starbash.main:app"       # std alias for convenience

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
